# imageclipper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: filesystem.h  imageclipper.cpp
src/opencvx/: README.txt  cvcropimageroi.h  cvdrawrectangle.h  cvipltocvdepth.h  cvlogsum.h  cvparticle.h  cvparticleobservepcadiffs.h  cvparticleobservetemplate.h  cvparticlestaterect.h  cvparticlestaterect2.h  cvpointrecttest.h  cvprintmat.h  cvrect32f.h  cvrectpoints.h  cvsetcol.h  cvsetrow.h  cvxrectangle.h
